--- a/rootdir/factory_init.project.rc
+++ b/rootdir/factory_init.project.rc
@@ -6,9 +6,20 @@ on post-fs
 #
 # Connectivity related modules and character device nodes (Begin)
 #
-    # for 662x_launcher
+    #for 662x_launcher
     chmod 0660 /dev/ttyMT2
     chown system system /dev/ttyMT2
+
+
+
+
+
+
+
+
+
+
+
 
     insmod /system/lib/modules/mtk_wmt_detect.ko
     
@@ -20,7 +31,7 @@ on post-fs
     chmod 0660 /dev/stpwmt
     chown system system /dev/stpwmt
     chmod 0660 /dev/wmtdetect
-    chown system system /dev/wmtdetect
+ 		chown system system /dev/wmtdetect
  		
     # FM Radio device, FIXME: this is not a proper way to set permissions
     chmod 0666 /dev/fm
@@ -30,12 +41,16 @@ on post-fs
     chmod 0660 /dev/stpgps
     chmod 0660 /dev/stpbt
     chown bluetooth radio /dev/stpbt
+    
+    # Load WiFi Driver
+    #insmod /system/lib/modules/wlan.ko
 
 #
 # Connectivity related modules and character device nodes (Ends)
 #
 
 on boot
+
 
 #
 # Connectivity related services (Begin)
@@ -50,7 +65,6 @@ service wmtLoader /system/bin/wmt_loader
 service 66xx_launcher /system/bin/6620_launcher -m 4 -p /system/etc/firmware/
     user system
     group system
-    
 
 #
 # Connectivity related services (End)
